# TGN

./: .gitignore  CONCEPTS.md  KIRO.md  Makefile  README.md  SETUP.md  presentation.html  pyproject.toml  requirements.txt
.streamlit/: config.toml
TGN docs/: Temporal Graph Networks for Fraud Detection.docx  reference_guide_addendum.docx  reference_guide_addendum.md  tgn_aws_architecture_onepager.docx  tgn_fraud_detection_guide_v2.docx  tgn_fraud_detection_guide_v2.md  unified_fraud_detection_guide.docx  unified_fraud_detection_guide.md
app/: main.py
app/ensemble_pages/: 1_Generate_Data.py  4_Score_Transactions.py  6_Pattern_Visualiser.py  __init__.py
app/pages/: 1_Generate_Data.py  2_Explore_Graph.py  3_Train_Model.py  4_Score_Transactions.py  5_Upload_CSV.py  6_Pattern_Visualiser.py  7_Why_TGN.py
checkpoints/: demo_model.pt
docs/: AWS_ARCHITECTURE.md  DEMO_READINESS.md  ENSEMBLE_DESIGN.md  Simple text AWS_PRODUCTION_ARCHITECTURE.md  tgn_fraud_detection_guide.md
docs/.versions/: TGN_Production_AWS_Architecture_001.html  (+1 more)
ensemble/: __init__.py  config.py
learn/: 01_data_generation.py  02_graph_construction.py  03_tgn_architecture.py  04_training_loop.py  05_inference_scoring.py  06_mint_transfer.py
scripts/: gen_demo.py  generate_demo_checkpoint.py
tests/: test_ensemble.py  test_ensemble_components.py  test_generators.py  test_graph.py  test_ingestion.py  test_mint.py  test_model.py  test_pragma_time_encoder.py  test_profile_encoder.py  test_scoring.py  test_tgn_with_profile.py  test_training.py
tgn_learn/: __init__.py  graph.py  train.py
(+52 files in other folders)
