[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgn-learn"
version = "0.1.0"
description = "TGN Fraud Detection Learning App — hands-on temporal graph networks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "pyvis>=0.3.2",
    "streamlit-agraph>=0.0.45",
    "plotly>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
